--- a/Assignment/login/list.html
+++ b/Assignment/login/list.html
@@ -36,112 +36,127 @@
             <option value="">IT</option>
             <option value="">INET</option>
         </select>
-        <select name="" id="">
-            <option value="" selected>วิชา</option>
-            <option value="">Comprogramming</option>
-            <option value="">Data Computer</option>
-        </select>
-        <p>จำนวน:</p>
+        
+        <p>จำนวน : 00</p>
     </div>
-    <div class="section">
+    <div class="section_list">
         <table border="1">
             <tr class="table_head">
-                <td>ประเภทโครงงาน</td>
+                <td>รหัสโครงงาน</td>
                 <td>ชื่อโครงงาน</td>
                 <td>สาขา</td>
-                <td>วิชา</td>
             </tr>
             <tr>
-                <td>โครงงานพิเศษ</td>
-                <td>I love intro</td>
+                <td style="width: 15%;">612345</td>
+                <td>Smart Campus System</td>
+                <td>IT</td>
+            </tr>
+            <tr>
+                <td style="width: 15%;">634872</td>
+                <td>AI Chatbot for Students</td>
+                <td>ITI</td>
+            </tr>
+            <tr>
+                <td style="width: 15%;">698201</td>
+                <td>IoT Smart Farming</td>
+                <td>INE</td>
+            </tr>
+            <tr>
+                <td style="width: 15%;">654390</td>
+                <td>Online Learning Platform</td>
                 <td>INET</td>
-                <td>INTRO</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">678945</td>
+                <td>Network Traffic Analyzer</td>
+                <td>ITT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">699002</td>
+                <td>Health Monitoring App</td>
+                <td>IT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">645871</td>
+                <td>Smart Library System</td>
+                <td>ITI</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">688234</td>
+                <td>Cybersecurity Dashboard</td>
+                <td>INE</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">667542</td>
+                <td>Student Activity Tracker</td>
+                <td>INET</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">653987</td>
+                <td>E-Learning Gamification</td>
+                <td>ITT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">694521</td>
+                <td>Cloud File Sharing System</td>
+                <td>IT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">681234</td>
+                <td>Blockchain Voting System</td>
+                <td>ITI</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">672908</td>
+                <td>Virtual Reality Learning Lab</td>
+                <td>INE</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">665432</td>
+                <td>Smart Transport Tracking</td>
+                <td>INET</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">690876</td>
+                <td>AI-based Exam Proctoring</td>
+                <td>ITT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">689001</td>
+                <td>Energy Saving IoT System</td>
+                <td>IT</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">674589</td>
+                <td>Smart Restaurant Ordering</td>
+                <td>ITI</td>
             </tr>
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td style="width: 15%;">696321</td>
+                <td>Face Recognition Security</td>
+                <td>INE</td>
             </tr>
+            <tr>
+                <td style="width: 15%;">662457</td>
+                <td>Smart Parking System</td>
+                <td>INET</td>
+            </tr>
+            <tr>
+                <td style="width: 15%;">687654</td>
+                <td>Language Learning Assistant</td>
+                <td>ITT</td>
+            </tr>        
         </table>
+        <div class="list_item">
+            <div class="list_item_all">1</div>
+            <div class="list_item_all">2</div>
+            <div class="list_item_all">3</div>
+            <div class="list_item_all">4</div>
+            <div class="list_item_all">5</div>
+            <div class="list_item_all">6</div>
+            <div class="list_item_all">7</div>
+            <div class="list_item_all">8</div>
+        </div>
     </div>
 </body>
 </html>
