--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -9,6 +9,15 @@
 </head>
 <body>
         <div>
+            <nav>
+                <div class="nav_left">
+                    <div class="nav_left_img"><img src="../img/Logo.png" alt="Kmutnb"></div>
+                    <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
+                </div>
+                <div class="nav_head">
+                    <a href="../login/index.html" >ลงชื่อออก</a>
+                </div>
+            </nav>
             <div class="head_all">
                 <h1>นักศึกษา</h1>
             </div>
@@ -46,6 +55,14 @@
                 </div>
                 <div class="info_all">
                     <div class="progress">
+                        <div style=" display: flex; padding: 3%;">
+                            <div style="display: flex; flex-direction: column; width: 30%; box-shadow: 0 0 5px grey; padding: 2%; border-radius: 10px;">
+                                <h5 style="padding-left: 0; margin-bottom: 1%;">รหัสโครงงาน</h5><input type="text" style="height: 35px;" readonly placeholder="686746">
+                            </div> 
+                            <div style="display: flex; flex-direction: column; width: 50%; margin-left: 5%; box-shadow: 0 0 5px grey; padding: 2%; border-radius: 10px;">
+                                <h5 style="padding-left: 0; margin-bottom: 1%;">ชื่อโครงงาน</h5><input type="text" style="height: 35px;" readonly placeholder="Ai Go Go">
+                            </div>
+                        </div>
                         <h4>ความก้าวหน้าโครงงาน</h4>
                         <div class="progress_1">
                             <div class="progress_2"></div>
