--- a/Assignment/consultant/consultant2.html
+++ b/Assignment/consultant/consultant2.html
@@ -9,6 +9,15 @@
 </head>
 <body>
         <div>
+            <nav>
+                <div class="nav_left">
+                    <div class="nav_left_img"><img src="../img/Logo.png" alt="Kmutnb"></div>
+                    <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
+                </div>
+                <div class="nav_head">
+                    <a href="../login/index.html" >ลงชื่อออก</a>
+                </div>
+            </nav>
             <div class="head_all">
                 <h1>อาจารย์ที่ปรึกษา</h1>
             </div>
@@ -45,7 +54,7 @@
 
 
                 <div class="info_all">
-                    <h3 class="consultant2_h3">รายชื่อผู้ร้องขอให้ดูแล</h3>
+                    <h3 class="consultant2_h3">รายชื่อผู้ร้องขอให้ดูแล : 2</h3>
                      <div class="consultant_home_1">
                             <div class="consultant_home_1_1">
                                 <div class="consultant_home_1_1_1">
@@ -58,9 +67,9 @@
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
-                                    <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                                    <h4>รหัสโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
-                                    <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                                    <h4>ชื่อโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
                                     <h4>วัตถุประสงค์:</h4>
                                     <input type="text" readonly placeholder="">
@@ -87,9 +96,9 @@
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
-                                    <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                                    <h4>รหัสโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
-                                    <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                                    <h4>ชื่อโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
                                     <h4>วัตถุประสงค์:</h4>
                                     <input type="text" readonly placeholder="">
