--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -9,6 +9,15 @@
 </head>
 <body>
         <div>
+            <nav>
+                <div class="nav_left">
+                    <div class="nav_left_img"><img src="../img/Logo.png" alt="Kmutnb"></div>
+                    <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
+                </div>
+                <div class="nav_head">
+                    <a href="../login/index.html" >ลงชื่อออก</a>
+                </div>
+            </nav>
             <div class="head_all">
                 <h1>นักศึกษา</h1>
             </div>
@@ -54,12 +63,6 @@
                             <select name="" id="">
                                 <option value="">โครงงานพิเศษ</option>
                                 <option value="">โครงงานสหกิจ</option>
-                            </select>
-                            <h5>วิชาที่อยู่ในประเภทโครงงานที่เลือก:</h5>
-                            <select name="" id="">
-                                <option value="" disabled selected>เลือกวิชา</option>
-                                <option value="">Intro</option>
-                                <option value="">Computer Programming</option>
                             </select>
                             <h4>รายละเอียดโครงงาน</h4><br>
                             <h5>ชื่อโครงงาน:</h5>
