--- a/Assignment/std/results.html
+++ b/Assignment/std/results.html
@@ -9,6 +9,15 @@
 </head>
 <body>
         <div>
+            <nav>
+                <div class="nav_left">
+                    <div class="nav_left_img"><img src="../img/Logo.png" alt="Kmutnb"></div>
+                    <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
+                </div>
+                <div class="nav_head">
+                    <a href="../login/index.html" >ลงชื่อออก</a>
+                </div>
+            </nav>
             <div class="head_all">
                 <h1>นักศึกษา</h1>
             </div>
