--- a/Assignment/subject/profile.html
+++ b/Assignment/subject/profile.html
@@ -9,6 +9,15 @@
 </head>
 <body>
         <div>
+            <nav>
+                <div class="nav_left">
+                    <div class="nav_left_img"><img src="../img/Logo.png" alt="Kmutnb"></div>
+                    <div class="nav_left_txt"><h3>มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าพระนครเหนือ วิทยาเขตปราจีนบุรี</h3></div>
+                </div>
+                <div class="nav_head">
+                    <a href="../login/index.html" >ลงชื่อออก</a>
+                </div>
+            </nav>
             <div class="head_all">
                 <h1>อาจารย์ประจำวิชา</h1>
             </div>
@@ -47,7 +56,7 @@
 
                 <div class="info_all">
                     <div id="consultant_home1" class="page active">
-                        <h3>รายชื่อโครงงานภายใต้วิชา</h3>
+                        <div style="display: flex; justify-content: space-between;"><h3>รายชื่อโครงงานภายใต้วิชา</h3><div style="display: flex; justify-content: end; align-items: end; width: 50%;" ><input type="search" style="margin-right: 2%;"placeholder="ชื่อโครงงาน"><button style="height: 30px;  margin-bottom: 0; margin-right: 6%;">ค้นหา</button></div></div>
 
 
                         <div class="consultant_home_1">
@@ -62,9 +71,9 @@
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
-                                    <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                                    <h4>รหัสโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
-                                    <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                                    <h4>ชื่อโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
                                     <h4>วัตถุประสงค์:</h4>
                                     <input type="text" readonly placeholder="">
@@ -91,9 +100,9 @@
                                     
                                 </div>
                                 <div class="consultant_home_1_1_2">
-                                    <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
+                                    <h4>รหัสโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
-                                    <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                                    <h4>ชื่อโครงงาน:</h4>
                                     <input type="text" readonly placeholder="">
                                     <h4>วัตถุประสงค์:</h4>
                                     <input type="text" readonly placeholder="">
@@ -134,9 +143,9 @@
                                 </div>
                             </div>
 
-                            <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
-                            <input type="text" readonly placeholder="#">
-                            <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                            <h4>รหัสโครงงาน:</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <h4>ชื่อโครงงาน:</h4>
                             <input type="text" readonly placeholder="#">
                             <h4>ข้อคิดเห็นต่อหัวเรื่อง</h4>
                             <textarea name="" id=""></textarea>
@@ -166,7 +175,7 @@
                             <div class="consultant_progress_1">
                                 <div class="consultant_progress_1_left">
                                     <div class="consultant_progress_1_left_top">
-                                        <h4>ชื่อโครงงาน (ภาษาไทย)</h4>
+                                        <h4>ชื่อโครงงาน</h4>
                                         <input type="text" readonly placeholder="">
                                     </div>
                                     <div class="consultant_progress_1_left_bottom">
@@ -350,9 +359,9 @@
                                 
                             </div>
 
-                            <h4>ชื่อโครงงาน (ภาษาไทย):</h4>
-                            <input type="text" readonly placeholder="#">
-                            <h4>ชื่อโครงงาน (ภาษาอังกฤษ):</h4>
+                            <h4>รหัสโครงงาน:</h4>
+                                    <input type="text" readonly placeholder="">
+                                    <h4>ชื่อโครงงาน:</h4>
                             <input type="text" readonly placeholder="#">
                             <h4>ข้อคิดเห็นต่อหัวเรื่อง</h4>
                             <textarea name="" id=""></textarea>
@@ -380,7 +389,7 @@
                             <div class="consultant_progress_1">
                                 <div class="consultant_progress_1_left">
                                     <div class="consultant_progress_1_left_top">
-                                        <h4>ชื่อโครงงาน (ภาษาไทย)</h4>
+                                        <h4>ชื่อโครงงาน</h4>
                                         <input type="text" readonly placeholder="">
                                     </div>
                                     <div class="consultant_progress_1_left_bottom">
