--- a/Assignment/director/1.html
+++ b/Assignment/director/1.html
@@ -48,9 +48,9 @@
 
             <div class="info">
                 <div class="navside_all">
-                    <a href="1.html" class="navside_all_one">โปรไฟล์</a>
-                    <a href="2.html">เสนอหัวข้อ</a>
-                    <a href="3.html">สถานะหัวข้อ</a>
+                    <a href="1.html" class="navside_all_one">สอบหัวข้อ</a>
+                    <a href="2.html">สอบจบ</a>
+                    <a href="3.html">ลงนาม</a>
                 </div>
 
 
