--- a/Assignment/director/2.html
+++ b/Assignment/director/2.html
@@ -47,9 +47,9 @@
 
             <div class="info">
                 <div class="navside_all">
-                    <a href="1.html">โปรไฟล์</a>
-                    <a href="2.html" class="navside_all_one">เสนอหัวข้อ</a>
-                    <a href="3.html">สถานะหัวข้อ</a>
+                    <a href="1.html">สอบหัวข้อ</a>
+                    <a href="2.html" class="navside_all_one">สอบจบ</a>
+                    <a href="3.html">ลงนาม</a>
                 </div>
 
 
