--- a/Assignment/director/3.html
+++ b/Assignment/director/3.html
@@ -47,9 +47,9 @@
 
             <div class="info">
                 <div class="navside_all">
-                    <a href="1.html">โปรไฟล์</a>
-                    <a href="2.html">เสนอหัวข้อ</a>
-                    <a href="3.html" class="navside_all_one">สถานะหัวข้อ</a>
+                    <a href="1.html">สอบหัวข้อ</a>
+                    <a href="2.html">สอบจบ</a>
+                    <a href="3.html" class="navside_all_one">ลงนาม</a>
                 </div>
 
 
@@ -175,6 +175,10 @@
                                 <h4>เล่มโครงงานฉบับสมบูรณ์</h4>
                                 <div class="director_download"><a href="#" download class="director_download_1">Download</a><div class="director_download_2"></div></div>
                                 <h4>ลงนาม</h4>
+                                <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                </label>
 
                                 <button style="background-color: rgb(63, 164, 103); color: white; border: 0" >ยืนยันลงนาม</button>
                             </div>
@@ -196,6 +200,10 @@
                                 <h4>เล่มโครงงานฉบับสมบูรณ์</h4>
                                 <div class="director_download"><a href="#" download class="director_download_1">Download</a><div class="director_download_2"></div></div>
                                 <h4>ลงนาม</h4>
+                                <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                </label>
 
                                 <button style="background-color: rgb(63, 164, 103); color: white; border: 0" >ยืนยันลงนาม</button>
                             </div>
@@ -213,6 +221,10 @@
                                 <h4>เล่มโครงงานฉบับสมบูรณ์</h4>
                                 <div class="director_download"><a href="#" download class="director_download_1">Download</a><div class="director_download_2"></div></div>
                                 <h4>ลงนาม</h4>
+                                <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                </label>
 
                                 <button style="background-color: rgb(63, 164, 103); color: white; border: 0" >ยืนยันลงนาม</button>
                             </div>
@@ -230,6 +242,10 @@
                                 <h4>เล่มโครงงานฉบับสมบูรณ์</h4>
                                 <div class="director_download"><a href="#" download class="director_download_1">Download</a><div class="director_download_2"></div></div>
                                 <h4>ลงนาม</h4>
+                                <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                </label>
 
                                 <button style="background-color: rgb(63, 164, 103); color: white; border: 0" >ยืนยันลงนาม</button>
                             </div>
@@ -247,7 +263,10 @@
                                 <h4>เล่มโครงงานฉบับสมบูรณ์</h4>
                                 <div class="director_download"><a href="#" download class="director_download_1">Download</a><div class="director_download_2"></div></div>
                                 <h4>ลงนาม</h4>
-
+                                <label class="proposal_status_section_3">
+                                        คลิกเพื่ออัพโหลดไฟล์ PDF
+                                        <input type="file">
+                                </label>
                                 <button style="background-color: rgb(63, 164, 103); color: white; border: 0" >ยืนยันลงนาม</button>
                             </div>
                         </div>
