--- a/Assignment/login/login.html
+++ b/Assignment/login/login.html
@@ -23,7 +23,7 @@
                     <option value="../std/profile.html">นักศึกษา (Student)</option>
                     <option value="../consultant/profile.html">อาจารย์ที่ปรึกษา (#)</option>
                     <option value="../subject/profile.html">อาจารย์ประจำวิชา (#)</option>
-                    <option value="../director/profile.html">กรรมการ (#)</option>
+                    <option value="../director/1.html">กรรมการ (#)</option>
                 </select>
                 <button class="log_btc" onclick="gopage()">ตกลง</button>
                 <script>
