--- a/Assignment/director/1.html
+++ b/Assignment/director/1.html
@@ -47,7 +47,7 @@
         
 
             <div class="info">
-                <div class="navside_all">
+                <div class="navside_all navside_all_2">
                     <a href="1.html" class="navside_all_one">สอบหัวข้อ</a>
                     <a href="2.html">สอบจบ</a>
                     <a href="3.html">ลงนาม</a>
