--- a/Assignment/login/list.html
+++ b/Assignment/login/list.html
@@ -148,14 +148,24 @@
             </tr>        
         </table>
         <div class="list_item">
-            <div class="list_item_all">1</div>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>10</button>
+            <!-- <div class="list_item_all">1</div>
             <div class="list_item_all">2</div>
             <div class="list_item_all">3</div>
             <div class="list_item_all">4</div>
             <div class="list_item_all">5</div>
             <div class="list_item_all">6</div>
             <div class="list_item_all">7</div>
-            <div class="list_item_all">8</div>
+            <div class="list_item_all">8</div> -->
         </div>
     </div>
 </body>
