--- a/Assignment/std/profile.html
+++ b/Assignment/std/profile.html
@@ -98,7 +98,7 @@
 
                             <div class="profile_footer_2">
                                 <div class="profile_footer_img"><img src="../img/LOGO-KMUTNB--300x300.png" alt="profile_2"></div>
-                                <div class="profile_footer_input"><input type="text" readonly placeholder="นางสาวชัชชดาภา โค้วสุขสกุล"><br><input type="text" readonly placeholder="6806022510416"></div>
+                                <div class="profile_footer_input"><input type="text" readonly placeholder="นางสาวชัชชดาภา โค้วสุขสกุล"><input type="text" readonly placeholder="6806022510416"></div>
                             </div>
                         </div>
                     </div>
