--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -70,7 +70,7 @@
                             <h5>ชื่อโครงงาน (ภาษาอังกฤษ):</h5>
                             <input type="text">
                             <h5>วัตถุประสงค์:</h5>
-                            <input type="text" placeholder="ข้อ 1">
+                            <input type="text" placeholder="ข้อ 1" >
                             <input type="text" placeholder="ข้อ 2">
                             <input type="text" placeholder="ข้อ 3">
                             <h5>ขอบเขตงาน:</h5>
@@ -80,8 +80,18 @@
                             <h4>อาจารย์ที่ปรึกษา</h4>
                             <select name="" id="">
                                 <option value="">รศ.ดร.อนิราช มิ่งขวัญ</option>
-                                <option value="">ผศ.ดร.สุพาภรณ์ ซิ้มเจริญ</option>
-                                <option value="">ผส.ดร.นิติการ นาคเจือทอง</option>
+                                <option value="">ผศ.อรบุษป์ วุฒิกมลชัย</option>
+                                <option value="">ผศ.ดร.บีสุดา ดาวเรือง</option>
+                                <option value="">ผศ.ดร.ขนิษฐา นามี</option>
+                                <option value="">อ.ดร.กาญจน ณ ศรีธะ</option>
+                                <option value="">ผศ.นพดล บูรณ์กุศล</option>
+                                <option value="">ผศ.จสต.นพเก้า ทองใบ</option>
+                                <option value="">ผศ.ดร.นิติการ นาคเจือทอง</option>
+                                <option value="">ผศ.ดร.นัฎฐพันธ์ นาคพงษ์</option>
+                                <option value="">ผศ.นิมิต ศรีคำทา</option>
+                                <option value="">อ.ดร.พิทย์พิมล ชูรอด</option>
+
+
                             </select>
                             <button class="proposal_sub_bt">ยืนยัน</button>
                         </div>
