--- a/Assignment/login/login.html
+++ b/Assignment/login/login.html
@@ -21,9 +21,10 @@
                 <h4>เลือกบทบาท</h4>
                 <select name="" id="pageselect">
                     <option value="../std/profile.html">นักศึกษา (Student)</option>
-                    <option value="../consultant/profile.html">อาจารย์ที่ปรึกษา (#)</option>
-                    <option value="../subject/profile.html">อาจารย์ประจำวิชา (#)</option>
-                    <option value="../director/1.html">กรรมการ (#)</option>
+                    <option value="../consultant/profile.html">อาจารย์ที่ปรึกษา (Advisor)</option>
+                    <option value="../subject/profile.html">อาจารย์ประจำวิชา (
+Subject teacher)</option>
+                    <option value="../director/1.html">กรรมการ (Director)</option>
                 </select>
                 <button class="log_btc" onclick="gopage()">ตกลง</button>
                 <script>
