--- a/Assignment/std/progress.html
+++ b/Assignment/std/progress.html
@@ -66,7 +66,8 @@
                         <h4>ความก้าวหน้าโครงงาน</h4>
                         <div class="progress_1">
                             <div class="progress_2"></div>
-                        </div><h5>ความก้าวหน้าโดยรวม: 40%</h5>
+                        </div>
+                        <h5>ความก้าวหน้าโดยรวม: 40%</h5>
 
 
 
