--- a/Assignment/subject/3.html
+++ b/Assignment/subject/3.html
@@ -213,17 +213,26 @@
                                 <div class="subject_2_all_d_2">
                                     <p>กรรมการคนที่ 1</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 2</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 3</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                 </div>
@@ -281,17 +290,26 @@
                                 <div class="subject_2_all_d_2">
                                     <p>กรรมการคนที่ 1</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 2</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 3</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                 </div>
@@ -345,17 +363,26 @@
                                 <div class="subject_2_all_d_2">
                                     <p>กรรมการคนที่ 1</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 2</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 3</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                 </div>
@@ -409,17 +436,26 @@
                                 <div class="subject_2_all_d_2">
                                     <p>กรรมการคนที่ 1</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 2</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 3</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                 </div>
@@ -473,17 +509,26 @@
                                 <div class="subject_2_all_d_2">
                                     <p>กรรมการคนที่ 1</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 2</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                     <p>กรรมการคนที่ 3</p>
                                     <input type="text" readonly placeholder="รอคำขอจากอาจารย์ประจำวิชา">
-                                    <div><input type="radio">อนุมัติ       <input type="radio">ไม่อนุมัติ</div>
+                                    <div class="director_ok">
+                                    <input type="checkbox"><p style="color: green;">อนุมัติ</p>
+                                    <input type="checkbox"><p style="color: rgb(154, 15, 0);">ไม่อนุมัติ</p>
+                                    </div>
                                     <p>หมายเหตุ</p>
                                     <textarea name="" id="" readonly></textarea>
                                 </div>
