--- a/Assignment/consultant/profile.html
+++ b/Assignment/consultant/profile.html
@@ -56,7 +56,7 @@
                 <div class="info_all">
                      <div id="consultant_home1" class="page active">
                         
-                        <div style="display: flex; justify-content: space-between;"><h3>รายชื่อนักศึกษาที่กำลังดูแล : 2</h3><div style="display: flex; justify-content: end; align-items: end; width: 50%;" ><input type="search" style="margin-right: 2%;"placeholder="ชื่อโครงงาน"><button style="height: 30px;  margin-bottom: 0; margin-right: 6%;">ค้นหา</button></div></div>
+                        <div style="display: flex; justify-content: space-between;"><h3>รายชื่อนักศึกษาที่กำลังดูแล : 2</h3><div style="display: flex; justify-content: end; align-items: end; width: 50%;" ><input type="search" style="margin-right: 2%;"placeholder="รหัสโครงงาน"><button style="height: 30px;  margin-bottom: 0; margin-right: 6%;">ค้นหา</button></div></div>
 
                         <div class="consultant_home_1">
                             <div class="consultant_home_1_1">
@@ -64,9 +64,9 @@
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="โครงงานพิเศษ">
                                     <h4>จัดทำโดย</h4>
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
@@ -94,7 +94,7 @@
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="โครงงานพิเศษ">
                                     <h4>จัดทำโดย</h4>
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายจิรายุ ">
                                     
                                 </div>
