--- a/Assignment/consultant/consultant2.html
+++ b/Assignment/consultant/consultant2.html
@@ -61,9 +61,9 @@
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="โครงงานพิเศษ">
                                     <h4>จัดทำโดย</h4>
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
@@ -90,9 +90,9 @@
                                     <h4>ประเภทโครงงาน</h4>
                                     <input type="text" readonly placeholder="โครงงานพิเศษ">
                                     <h4>จัดทำโดย</h4>
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
-                                    <img src="../img/LOGO-KMUTNB--300x300.png" alt="">
+                                    <div class="con"><img src="../img/LOGO-KMUTNB--300x300.png" alt=""></div>
                                     <input type="text" readonly placeholder="นายภูริณัฐ ยวนหลี">
                                 </div>
                                 <div class="consultant_home_1_1_2">
