--- a/Assignment/director/1.html
+++ b/Assignment/director/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student</title>
+    <title>ระบบจัดการโครงงาน</title>
     <link rel="stylesheet" href="../css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบจัดการคลังสินค้าอัจฉริยะ"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>วันที่เลือก</h4></div><div class="table_1_2"><input type="date" readonly ></div>
@@ -87,7 +87,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบจัดการเอกสารออนไลน์"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>วันที่เลือก</h4></div><div class="table_1_2"><input type="date" readonly ></div>
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเช็กชื่อเข้าเรียนอัตโนมัติ"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>วันที่เลือก</h4></div><div class="table_1_2"><input type="date" readonly ></div>
@@ -130,7 +130,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบรับแจ้งปัญหาไอทีภายในองค์กร"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>วันที่เลือก</h4></div><div class="table_1_2"><input type="date" readonly ></div>
@@ -152,7 +152,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบติดตามการซ่อมอุปกรณ์ออนไลน์"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>วันที่เลือก</h4></div><div class="table_1_2"><input type="date" readonly ></div>
