--- a/Assignment/director/3.html
+++ b/Assignment/director/3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student</title>
+    <title>ระบบจัดการโครงงาน</title>
     <link rel="stylesheet" href="../css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -57,15 +57,15 @@
                 <div class="info_all">
                     <div id="subject_1" class="page active">
                         <div class="subject_1">
-                            <div class="results_head"><h2>จัดการสอบจบ</h2></div>
-                            <h3>รายชื่อโครงงานที่ยื่นสอบจบ</h3>
+                            <div class="results_head"><h2>ลงนาม</h2></div>
+                            <h3>รายชื่อโครงงานที่พร้อมลงนาม</h3>
                             <div class="table">
                                 <div class="table_1_bt">
                                     <button onclick="showpage('director_1_1')">ลงนาม</button>
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบตรวจวัดอุณหภูมิและความชื้นในฟาร์ม"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>ประเภทโครงงาน</h4></div><div class="table_1_2"><input type="text" readonly ></div>
@@ -85,7 +85,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบควบคุมเครื่องใช้ไฟฟ้าผ่านอินเทอร์เน็ต"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>ประเภทโครงงาน</h4></div><div class="table_1_2"><input type="text" readonly ></div>
@@ -105,7 +105,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบจอดรถอัจฉริยะด้วยเซนเซอร์"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>ประเภทโครงงาน</h4></div><div class="table_1_2"><input type="text" readonly ></div>
@@ -126,7 +126,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบควบคุมพลังงานในอาคารอัตโนมัติ"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>ประเภทโครงงาน</h4></div><div class="table_1_2"><input type="text" readonly ></div>
@@ -147,7 +147,7 @@
                                 </div>
                                 <div class="table_section">
                                     <div class="table_1">
-                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบเครื่องบิน"></div>
+                                    <div class="table_1_1"><h4>โครงงาน</h4></div><div class="table_1_2"><input type="text" readonly placeholder="ระบบติดตามสุขภาพผ่านอุปกรณ์ IoT"></div>
                                     </div>
                                     <div class="table_1">
                                         <div class="table_1_1"><h4>ประเภทโครงงาน</h4></div><div class="table_1_2"><input type="text" readonly ></div>
