--- a/Assignment/login/login.html
+++ b/Assignment/login/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>ระบบจัดการโครงงาน</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,8 +22,7 @@
                 <select name="" id="pageselect">
                     <option value="../std/profile.html">นักศึกษา (Student)</option>
                     <option value="../consultant/profile.html">อาจารย์ที่ปรึกษา (Advisor)</option>
-                    <option value="../subject/profile.html">อาจารย์ประจำวิชา (
-Subject teacher)</option>
+                    <option value="../subject/profile.html">อาจารย์ประจำวิชา (Subject teacher)</option>
                     <option value="../director/1.html">กรรมการ (Director)</option>
                 </select>
                 <button class="log_btc" onclick="gopage()">ตกลง</button>
