--- a/Assignment/std/proposal_sub.html
+++ b/Assignment/std/proposal_sub.html
@@ -93,6 +93,22 @@
 
 
                             </select>
+                            <h4>อาจารย์ที่ปรึกษาร่วม (ถ้ามี)</h4>
+                            <select name="" id="">
+                                <option value="">รศ.ดร.อนิราช มิ่งขวัญ</option>
+                                <option value="">ผศ.อรบุษป์ วุฒิกมลชัย</option>
+                                <option value="">ผศ.ดร.บีสุดา ดาวเรือง</option>
+                                <option value="">ผศ.ดร.ขนิษฐา นามี</option>
+                                <option value="">อ.ดร.กาญจน ณ ศรีธะ</option>
+                                <option value="">ผศ.นพดล บูรณ์กุศล</option>
+                                <option value="">ผศ.จสต.นพเก้า ทองใบ</option>
+                                <option value="">ผศ.ดร.นิติการ นาคเจือทอง</option>
+                                <option value="">ผศ.ดร.นัฎฐพันธ์ นาคพงษ์</option>
+                                <option value="">ผศ.นิมิต ศรีคำทา</option>
+                                <option value="">อ.ดร.พิทย์พิมล ชูรอด</option>
+
+
+                            </select>
                             <button class="proposal_sub_bt">ยืนยัน</button>
                         </div>
                     </div>
